# experiments

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
include/chrono-wrapper/: chrono-wrapper.h
include/functest/: functest.h  systest.h
include/logging/: easylogging-wrapper.h  json-log.h  jsonlog.h
scripts/: emergency-shutdown.sh  print-test.sh  suicide.service
src/: asio-tcp-client.cc  asio-tcp-server.cc  chrono-test.cc  destructor-test.cc  easylogging-test.cc  enumprint.cc  fmt-progress.cc  functestmain.cc  gaussfit.cc  invertigo.cc  json-test.cc  rpclib-client.cc  rpclib-server.cc  sockpp-tcp-client.cc  sockpp-tcp-server.cc  spdlog-test.cc  systemctl-cli.cc
stress/: stress-high.sh  stress-install.sh  stress-low.sh
test/: jsonlog-test.cc
